objects/Orphan_Visit__c.object
<CustomObject>
    <description>Orphan Visit For Field Office</description>
    <fields>
        <fullName>Accommodation__c</fullName>
        <label>Accommodation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>Acceptable</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Excellent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attitude_of_Guardian__c</fullName>
        <label>Attitude of Guardian</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>Acceptable</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Excellent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMS_SponsoreeWorkerVisit_Id__c</fullName>
        <externalId>true</externalId>
        <label>DMS SponsoreeWorkerVisit Id</label>
        <length>45</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hygiene__c</fullName>
        <label>Hygiene</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>Acceptable</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Excellent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_of_Visit__c</fullName>
        <label>Location of Visit</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                    <default>true</default>
                    <label>Home</label>
                </value>
                <value>
                    <fullName>School</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Orphan_Visit_Form_Pic_Upload__c</fullName>
        <formula>IF( ISPICKVAL( Status__c , &quot;Completed&quot;),&quot;Orphan Visit form already completed&quot;, HYPERLINK(&quot;/flow/Orphan_Photo_Upload?recordId=&quot;&amp;CASESAFEID(Id), &quot;Orphan Visit&quot;, &quot;_self&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Orphan Visit Form Pic Upload</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orphan_Visit_Form__c</fullName>
        <formula>IF( ISPICKVAL( Status__c , &quot;Completed&quot;),&quot;Orphan Visit form already completed&quot;, HYPERLINK(&quot;/flow/Orphan_Visit_Form_on_Visit?recordId=&quot;+ CASESAFEID(Id) , &quot;Orphan Visit&quot;, &quot;_self&quot;))</formula>
        <label>Orphan Visit Form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orphan__c</fullName>
        <label>Orphan</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Orphan</value>
            </filterItems>
            <infoMessage>Please select an Orphan</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orphan Visits</relationshipLabel>
        <relationshipName>Orphan_Visits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Purpose_of_Visit__c</fullName>
        <label>Purpose of Visit</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                    <default>true</default>
                    <label>General</label>
                </value>
                <value>
                    <fullName>Deliver Stipend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visit_Completed_Date_time__c</fullName>
        <description>Populate when visit is completed, For End user Readonly</description>
        <label>Visit Completed Date &amp; time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Visit_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Visit Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Welfare_of_Guardian__c</fullName>
        <label>Welfare of Guardian</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Poor</fullName>
                </value>
                <value>
                    <fullName>Acceptable</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Excellent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Orphan Visit</label>
    <nameField>
        <displayFormat>VISIT-{00000}</displayFormat>
        <label>Orphan Visit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orphan Visits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>